--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/megparlmer/employee-tracker.git"
+    "url": "git+https://github.com/tparlmer/employee-tracker-2.0.git"
   },
-  "author": "megparlmer",
+  "author": "tparlmer",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/megparlmer/employee-tracker/issues"
+    "url": "https://github.com/tparlmer/employee-tracker-2.0/issues"
   },
-  "homepage": "https://github.com/megparlmer/employee-tracker#readme",
+  "homepage": "https://github.com/tparlmer/employee-tracker-2.0#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
