--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/tparlmer/employee-tracker-2.0#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
+    "mysql2": "^2.3.3",
     "node": "^17.7.2"
   }
 }
